// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag Medium matches snapshot (deletable) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878f9a;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  font-size: 0.75rem;
  line-height: 1.375rem;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: var(--spacing-1x);
}

.c2:focus {
  outline: none;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 0 2px #0080A566;
  box-shadow: 0 0 0 3px #0080A566,0 0 0 1px #0080A5;
}

<li
  class="c0 c1"
>
  Test
  <button
    aria-label="Remove Test from the list"
    class="c2"
    data-testid="Test-delete-button"
    type="button"
  >
    <svg
      aria-hidden="true"
      color="#60666e"
      focusable="false"
      height="16"
      width="16"
    />
  </button>
</li>
`;

exports[`Tag Medium matches snapshot (desktop) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878f9a;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  font-size: 0.75rem;
  line-height: 1.375rem;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<li
  class="c0 c1"
>
  Test
</li>
`;

exports[`Tag Medium matches snapshot (mobile) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878f9a;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  font-size: 0.875rem;
  line-height: 1.875rem;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

<li
  class="c0 c1"
>
  Test
</li>
`;

exports[`Tag Medium matches snapshot (with icons) 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background-color: #F1F2F2;
  border: 1px solid #878f9a;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  font-size: 0.75rem;
  line-height: 1.375rem;
  padding: 0 var(--spacing-1x);
}

.c0 + .c0 {
  margin-left: var(--spacing-1x);
}

.c2 {
  color: #60666e;
  margin-right: var(--spacing-1x);
}

<li
  class="c0 c1"
>
  <svg
    aria-hidden="false"
    aria-label="home"
    class="c2"
    color="currentColor"
    data-testid="Test-icon"
    focusable="false"
    height="16"
    width="16"
  />
  Test
</li>
`;
